[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bit-vec = "0.8.0"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.30.0"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
serde = "1.0.217"

[profile.release]
debug = true
